--- a/app/styles/_elements/transitions.css
+++ b/app/styles/_elements/transitions.css
@@ -3,6 +3,7 @@
 $default-duration: .3s;
 $default-ease: ease-out;
 $bounce-in: cubic-bezier(0.160, 0.035, 0.240, 1.295);
+$slide-in: cubic-bezier(.87,-.41,.19,1.44);
 
 @define-mixin default-transition {
     transition-duration: $default-duration;
